--- a/WebAPI-dev/WebAPI-dev.csproj
+++ b/WebAPI-dev/WebAPI-dev.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
+    <PackageReference Include="Google.Apis.Auth" Version="1.63.0" />
     <PackageReference Include="Google.Apis.Sheets.v4" Version="1.63.0.3148" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.11" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
